# agentic-literature-review

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
docs/: governance.md  milestone_2.md  product-proposal.md  system-design.md
docs/specs/: config.md  literature_review_agent.md  observability_and_evals.md  search_module.md  session_storage_and_state.md  streamlit_webapp.md
evals/: conftest.py  dataset.json  dataset.py  metrics.py  pipeline_runner.py  test_e2e_review.py
src/: agentic_workflow.py  observability.py  prompts.py  schemas.py  search_engine.py  session_store.py  tools.py  utils.py
tests/: conftest.py  test_agentic_workflow.py  test_prompts.py  test_search_engine.py  test_session_store.py  test_tools.py  test_utils.py
