[project]
name = "agentic-literature-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openrouter>=0.1.0",
    "langfuse>=4.0.0",
    "langgraph>=1.1.2",
    "streamlit>=1.55.0",
    "streamlit-pdf-viewer>=0.0.28",
]
